z-index fix for currency switcher

--- a/dev/scss/general/global.scss
+++ b/dev/scss/general/global.scss
@@ -3,6 +3,10 @@ html, body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.buckscc-currency-box {
+	z-index: 1 !important;
+}
+
 * {
 	outline: none !important;
 }
